[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tlsim2"
version = "0.1.0"
description = "Short description here"
authors = [{ name = "Ilya Besedin", email = "gamlo@blincake.org" }]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "attributedict"
]

[tool.setuptools]
packages = ["tlsim2"]

[project.optional-dependencies]
dev = ["pytest", "black"]